menambahkan beberapa feature dan meperbaiki authorization
